src/styles/global.css
/* ... */
nav ul {
  list-style-type: none;
  display: flex;
  justify-content: center;
  gap: 1rem;
  align-items: center;
  padding: 0.4rem 0;
  font-size: 0.9rem;
  font-weight: 300;
}

nav li {
  position: relative;
  padding: 0.4rem 1rem;
}

nav li::before {
  content: '';
  pointer-events: none;
  position: absolute;
  bottom: 0;
  left: 50%;
  width: 50%;
  height: 3px;
  transform: translateX(-50%) scaleX(0) ;
  border-radius: 50px;
  background: hsl(var(--text-primary), 0.5);
  transition: transform 200ms ease;
}

nav li:hover::before, nav li.active::before {
  transform: translateX(-50%) scaleX(1);
}



nav a {
  color: inherit;
  text-decoration: none;
}

.nav-button {
  width: 1.5rem;
  aspect-ratio: 1;
  background: none;
  border: none;
  color: inherit;
  padding: 0;
  cursor: pointer;
}

nav svg {
  width: 100%;
  aspect-ratio: 1;
  pointer-events: none;
}

.options {
  position: absolute;
  top: calc(100% + 1rem);
  right: 0;
  display: none;
  flex-direction: column;
  font-size: 0.9rem;
  min-width: 150px;
  padding: 0.2rem;
  border-radius: 15px;
  background: hsla(var(--nav-background), 0.05);
  backdrop-filter: blur(10px);
  color: hsl(var(--text-primary));
  box-shadow: inset 0 1px 1px rgba(255, 255, 255, 0.25),
              0 1px 1px rgba(0, 0, 0, 0.05),
              0 2px 2px rgba(0, 0, 0, 0.05),
              0 4px 4px rgba(0, 0, 0, 0.05),
              0 8px 8px rgba(0, 0, 0, 0.05);
  animation: hideOptions 200ms ease;
}

.light .options {
  background: hsla(var(--nav-background), 0.7);
}

.options.open {
  display: flex;
  animation: showOptions 200ms ease;
}

.option {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5rem;
  gap: 2rem;
  border-radius: 10px;
  cursor: pointer;
}

.option:hover {
  background: rgba(255, 255, 255, 0.1);
}

.option button {
  position: relative;
  width: 2.5rem;
  height: 1.5rem;
  border: none;
  border-radius: 50px;
  background: lightgray;
  cursor: pointer;
}

.option button::before {
  content: '';
  position: absolute;
  top: 50%;
  left: 1px;
  transform: translateY(-50%);
  height: 90%;
  aspect-ratio: 1;
  background: white;
  border-radius: 50px;
  transition: transform 200ms ease;
}

.option.enabled button {
  background: hsl(110, 50%, 50%);
}

.option.enabled button::before {
  transform: translateY(-50%) translateX(75%);
}

main {
  display: flex;
  flex-direction: column;
  gap: 4rem;
}

.section-heading {
  font-size: 2.2rem;
  font-weight: 800;
}

.section-description {
  max-width: 75ch;
  text-align: center;
  font-size: 1.2rem;
}

#hero {
  position: relative;
  width: 100%;
  height: 100dvh;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 5rem;
  background: radial-gradient(ellipse 50% 50% at top center, hsla(var(--background-yellow), 0.25), hsla(var(--background), 0)),
              radial-gradient(circle 300px at 25% 50%, hsla(var(--background-blue), 0.25), hsla(var(--background), 0));
}

#hero-img, #about-img {
  position: relative;
  transition: transform 200ms ease;
  box-shadow: var(--card-shadow);
  overflow: hidden;
  border-radius: 10px;
  will-change: transform;
}

@keyframes shine {
  100% {
    transform: translate(300%, 30%) rotate(45deg);
  }
}

#hero-img::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100px;
  height: 150%;
  opacity: 0.7;
  transform: translate(-60%, -60%) rotate(45deg);
  background: linear-gradient(90deg,rgba(255, 255, 255, 0) 0%, rgb(255, 255, 255) 50%, rgba(255, 255, 255, 0) 100%);
}

#hero-img:hover::after {
  animation: shine 700ms ease;
}

#hero-img:hover, #about-img:hover {
  transform: scale(102%) translateY(-1%) rotate(-3deg);
}

.hero-content {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 7rem;
}

#hero-img {
  width: 300px;
}

#hero-img.show {
  animation-delay: 200ms;
}

#hero img {
  max-width: 100%;
  aspect-ratio: 3 / 4;
  object-fit: cover;
  border: 5px solid white;
  border-radius: 10px;
}

.intro-container {
  display: flex;
  width: min(35%, 600px);
  flex-direction: column;
  justify-content: center;
  align-items: start;
}

.greeting {
  font-size: 1.3rem;
  font-weight: 600;
  color: hsl(var(--text-secondary));
}

.greeting.show {
  animation-delay: 200ms;
}

.name {
  font-size: 3.5rem;
  font-weight: 800;
  color: hsl(var(--text-primary));
  margin-bottom: -0.4rem;
}

.name.show {
  animation-delay: 300ms;
}


.job-title {
  font-size: 2.2rem;
  font-weight: 700;
  color: hsl(var(--text));
  transition: text-shadow 200ms ease;
}

.job-title.show{
  animation-delay: 400ms;
}


.job-title:hover {
  text-shadow: 0 0px 15px hsl(var(--golden-glow));
}

.description {
  margin-top: 0.6rem;
  font-size: 1.125rem;
  font-weight: 500;
}

.description.show {
  animation-delay: 500ms;
}


.see-my-work {
  position: relative;
  margin-top: 1.5rem;
  text-decoration: none;
  color: hsl(var(--primary));
  font-size: 1.125rem;
  font-weight: 600;
  border: 1px solid hsl(var(--primary));
  border-radius: 10px;
  padding: 0.5rem 1.2rem;
  box-shadow: 0 2px 2px hsla(var(--primary), .30),
              0 4px 4px hsla(var(--primary), .15),
              0 8px 8px hsla(var(--primary), .05)
              ;
}

.see-my-work.show {
  animation-delay: 600ms;
}

.see-my-work:hover, .send-a-message:hover {
  transform: scale(1.1);
  transition: transform 200ms ease-out;
}

.see-my-work::before, .send-a-message::before {
  content: '';
  position: absolute;
  inset: 0;
  width: 100%; 
  height: 100%;
  border: 1px solid hsl(var(--primary));
  border-radius: 10px;
  opacity: 0;
}

.see-my-work:hover::before, .send-a-message:hover::before {
  animation: ripple 500ms ease-out;  
}

.see-my-work::after, .send-a-message::after {
  content: '';
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  background: hsla(var(--primary), .05);
  opacity: 0;
}

.see-my-work:hover::after, .send-a-message:hover::after {
  opacity: 1;
}
/* ... */

